@@ -130,8 +130,23 @@ static iTermDisplayProfileMgr *singleInstance = nil;
 
 - (NSString *) defaultProfileName
 {
-	return (NSLocalizedStringFromTableInBundle(@"Default",@"iTerm", [NSBundle bundleForClass: [self class]],
-											   @"Display Profiles"));
+	NSDictionary *aProfile;
+	NSEnumerator *keyEnumerator;
+	NSString *aKey, *aProfileName;
+	
+	keyEnumerator = [profiles keyEnumerator];
+	aProfileName = nil;
+	while ((aKey = [keyEnumerator nextObject]))
+	{
+		aProfile = [profiles objectForKey: aKey];
+		if([[aProfile objectForKey: @"Default Profile"] isEqualToString: @"Yes"])
+		{
+			aProfileName = aKey;
+			break;
+		}
+	}
+	
+	return (aProfileName);
 }
 
 
